--- a/style.css
+++ b/style.css
@@ -10,7 +10,10 @@ body {
 }
 
 #search-box {
-    width: 200px;
+    width: 463px;
     height: 30px;
-    background: blue;
+    border: 1px solid #000;
+    top: 350px;
+    left: 400px;
+    position: absolute;
 }
